2003-03-17  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkgl/widget.py: Widget subclasses built-in object class,
	and restricts instantiation.

2003-03-17  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkgl/apputils.py: Added new add-on module which is based on
	PyGtkGLTemplate.py written by Alif. It provides GLScene, GLArea,
	and GLApplication classes which reduces programmers' work.

2003-03-17  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	Added new example programs contributed by Alif Wahid.
	Thank you, Alif ;-)

	* examples/NeHe6Multi.py: 
	* examples/Shapes.py: 

2003-03-14  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	Added new example programs contributed by Alif Wahid.
	Thank you, Alif ;-)

	* examples/teapot2.py: Revised version of teapot.py using the
	template.
	* examples/MoveLight.py: A demo ported from PyOpenGL and PyGLUT.
	* examples/SimpleScene.py: A demo ported from PyOpenGL and PyGLUT.
	* examples/PyGtkGLTemplate.py: Generic interface class and a
	OpenGL widget.

2003-03-10  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* Version 0.0.2

2003-03-09  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/teapot.py: Simple example based on cone.py that comes
	with PyGTK.

	* examples/cone.py: Removed.

	* examples/gears-*.py: Rewritten.

2003-03-07  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/*.py: Check gtk.gdkgl.NoMatches exception and try
	single-buffered frame buffer.

	* gtk/gdkgl/gdkglext.override (_wrap_gdk_gl_config_new): Raises
	gtk.gdkgl.NoMatches exception if no frame buffer configurations
	match the specified attributes.

	* gtk/gdkgl/gdkglmodule.c: Added gtk.gdkgl.NoMatches exception.

2003-03-06  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* Version 0.0.1

	* Initial alpha release.
