@@ -103,7 +103,7 @@ except ImportError:
 gdkglext = TemplateExtension(name='gdkglext',
                              pkc_name=GTKGLEXT_PKG,
                              pkc_version=GTKGLEXT_REQUIRED_VERSION,
-                             output='gtk.gdkgl._gdkglmodule',
+                             output='gtk.gdkgl._gdkgl',
                              defs='gtk/gdkgl/gdkglext.defs',
                              sources=['gtk/gdkgl/gdkglmodule.c',
                                       'gtk/gdkgl/gdkglext.c'],
@@ -113,7 +113,7 @@ gdkglext = TemplateExtension(name='gdkglext',
 gtkglext = TemplateExtension(name='gtkglext',
                              pkc_name=GTKGLEXT_PKG,
                              pkc_version=GTKGLEXT_REQUIRED_VERSION,
-                             output='gtk.gtkgl._gtkglmodule',
+                             output='gtk.gtkgl._gtkgl',
                              defs='gtk/gtkgl/gtkglext.defs',
                              sources=['gtk/gtkgl/gtkglmodule.c',
                                       'gtk/gtkgl/gtkglext.c'],
